packages/masonex/test/cli/bricks/compilation_error/hooks/pre_gen.dart
// ignore_for_file: missing_function_body
// ignore: depend_on_referenced_packages
import 'package:masonex/masonex.dart';void run(HookContext context)
